crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__sidebar_loose_repos.snap
---
source: crates/tui/src/ui/mod.rs
expression: content
---
╭ PROJECTS ────────────────────────────╮
│▎  ⎇ src-flow (flow)                  │
│ ▾ ⎇ src-agent-multi                  │
│  │ ○ main                            │
│  │ ⎇ nightly                         │
│   ⎇ src-ferrum-trade (ferrum-trade)  │
│ ▾ ⎇ src-void-setup                   │
│  │ ○ main                            │
│  │ ⎇ x220t                           │
│                                      │
│                                      │
╰──────────────────────────────────────╯
