crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__sidebar_pr_review_bucket.snap
---
source: crates/tui/src/ui/mod.rs
expression: content
---
╭ PROJECTS ────────────────────────────╮
│▎▾ ● pr-review                        │
│    ◎ owner/repo#1 [PR]               │
│    ◎ owner/repo#2 [PR]               │
│   ⎇ src-plain-ws (plain-ws)          │
│                                      │
│                                      │
╰──────────────────────────────────────╯
