crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__sidebar_project_tree.snap
---
source: crates/tui/src/ui/mod.rs
expression: content
---
╭ PROJECTS ──────────────────▐
│ ▾ ● frontend 2             ▐
│  ▾ ⎇ piki                  ▐
│▎ │ ○ nightly               ▐
│  │ ⎇ feat/sidebar          ▐
│  🗁 /home/user/notes        ▐
│                            ▐
│ ▾ ● backend 1              │
│  ▾ ⎇ api                   │
│  │ ⎇ main                  │
│                            │
│ ▾ ● no project 1           │
│  ▾ ⎇ loose                 │
╰────────────────────────────╯
