crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__sidebar_projects_tab.snap
---
source: crates/tui/src/ui/mod.rs
assertion_line: 1052
expression: content
---
╭ WORKSPACES │ PROJECTS ─────╮
│ ▾ ● frontend 2             │
│▎   nightly                 │
│    /home/user/notes        │
│ ▸ ● backend 1              │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
╰────────────────────────────╯
