crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__status_bar_normal_no_workspace.snap
---
source: crates/tui/src/ui/mod.rs
assertion_line: 95
expression: content
---
 No active workspace
