crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__status_bar_prefix_pending.snap
---
source: crates/tui/src/ui/mod.rs
assertion_line: 109
expression: content
---
 [PREFIX] │ No active workspace
