crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__tab_bar_overflow.snap
---
source: crates/tui/src/ui/mod.rs
assertion_line: 695
expression: content
---
‹3  4 ▸ Shell ×   5 ▸ Shell ×  3›  +
────────────────────────────────────────
