crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__tab_bar_solid_blocks.snap
---
source: crates/tui/src/ui/mod.rs
assertion_line: 317
expression: content
---
 1 ▸ Claude ×   2 ▸ Shell ×   +
────────────────────────────────────────────────────────────
