crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__which_key_overlay.snap
---
source: crates/tui/src/ui/mod.rs
expression: content
---









╭ C-g ─────────────────────────────────────────────────────────────────────────╮
│Workspace  s new  r worktree  e edit  d delete  b dashboard  i info  w switch │
│           } next  { prev  ` last                                             │
│Git        g lazygit                                                          │
│Tabs       c new  x close  n next  p prev  R rename  C-r restart  C-w move    │
│Search     / find file  t grep  f search                                      │
│View       : palette  ? all keys  a about  o logs  C-s sessions  [ scroll     │
│           C-k clear  y chat  C-y to chat  C-t terminal                       │
│Focus      h left  j down  k up  l right                                      │
│Layout     < sidebar −  > sidebar +  + split +  - split −                     │
│Agents     m agents  C-a attention                                            │
│Providers  v providers                                                        │
│App        q quit                                                             │
│1-9 tab   C-g literal   Esc cancel                                            │
╰──────────────────────────────────────────────────────────────────────────────╯
