crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__workspace_list_collapsed_family_surfaces_child_attention.snap
---
source: crates/tui/src/ui/mod.rs
assertion_line: 650
expression: content
---
╭ WORKSPACES │ PROJECTS ───────────────╮
│▎▸ ○ src-agent-multi (main) ● 1∆ ↑1 ↓2│
│                                      │
│                                      │
│                                      │
╰──────────────────────────────────────╯
