crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__workspace_list_family_separators.snap
---
source: crates/tui/src/ui/mod.rs
assertion_line: 602
expression: content
---
╭ WORKSPACES │ PROJECTS ───────────────╮
│▎  ⎇ flow                             │
│                                      │
│ ▾ ○ src-agent-multi (main)           │
│ │ ⎇ nightly (nightly)                │
│                                      │
│   ⎇ ferrum-trade                     │
│                                      │
│ ▾ ○ src-void-setup (main)            │
│ │ ⎇ x220t (x220t)                    │
│                                      │
╰──────────────────────────────────────╯
