crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__workspace_list_non_repo_folder_shows_no_branch_suffix.snap
---
source: crates/tui/src/ui/mod.rs
expression: content
---
╭ PROJECTS ────────────────────────────╮
│▎▾ ● no project 1                     │
│    ▣ plain-folder                    │
│                                      │
│                                      │
╰──────────────────────────────────────╯
